# nantian-agent-demo

./: .env.example  .gitignore  README.md  pyproject.toml
src/agent/: swe_agent.py  swe_tools_server.py
src/basic/: sdk.py  tokenier.py
src/mcp/: function_calling.py  get_weather_mcp_client.py  get_weather_mcp_client_claude.py  get_weather_mcp_server.py  prompt_native.py
